--- a/desafios/desafio12/style.css
+++ b/desafios/desafio12/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+:root{
+
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 
 *{
     margin: 0px;
@@ -8,6 +16,7 @@
 
 body{
     background-color: gray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -16,9 +25,13 @@ header{
     text-align: center;
     padding: 50px;
     max-height: 300px;
+
 }
 header>h1{
+    font-size: 3.5em;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    
 }
 a{
     text-decoration: none;
@@ -30,21 +43,37 @@ a:hover{
 }
 section.normal{
     background-color: whitesmoke;
+
 }
 section.imagem{
     background-color: gray;
+    background-attachment: fixed;
     color: whitesmoke;
-
+    padding: 0px;
+    box-shadow: inset 6px 6px 13px 0px black
+}
+section.normal>p{
+    padding: 10px;
 }
 section.imagem>p{
-    background-color: black;
-    padding: 10px;
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.301);
+    padding: 30px;
+    display: inline-block;
+    
 }
 section{
-    padding: 10vh 0px 10vh 40px;
-    line-height: 2em
+    font-size: 2em;
+    font-family: var(--fonte3);
+    padding: 10vh 0px 10vh 20px;
     
+}
+section#imagem1{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+section#imagem2{
+    background-image: url(imagens/background002.jpg);
 }
 
 footer{
